--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,46 @@
+#mapper xml
+mybatis.mapper-locations=classpath:mapperXML/*.xml
+#mybatis.config-location=classpath:mapperxml/config/sqlMapConfig.xml
+#mybatis.type-aliases-package=com.lin.study.pojo
+# 如果想看到mybatis日志需要做如下配置
+logging.level.com.carry=DEBUG
+# 配置控制台打印sql
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
+spring.datasource.url=jdbc:mysql://localhost:3306/yangShop?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# 通用Mapper
+# 主键自增回写方法,默认值MYSQL,详细说明请看文档
+mapper.identity=MYSQL
+mapper.mappers=tk.mybatis.mapper.common.BaseMapper
+# 设置 insert 和 update 中，是否判断字符串类型!=''
+mapper.not-empty=true
+# 枚举按简单类型处理
+mapper.enum-as-simple-type=true
+
+server.port=8080
+#页面跳转  让controller找到templates文件夹
+spring.thymeleaf.prefix=classpath:/templates/
+
+#redis 配置
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# Redis服务器地址
+spring.redis.host=127.0.0.1
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=123456
+# 连接池最大连接数（使用负值表示没有限制）
+#spring.redis.pool.max-active=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+#spring.redis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+#spring.redis.pool.max-idle=8
+# 连接池中的最小空闲连接
+#spring.redis.pool.min-idle=0
+# 连接超时时间（毫秒）
+#spring.redis.timeout=0
